desktop/desktop.scss
@import "common/foundation/variables";

.link-top-line .vote-count-before-title {
  display: none;
}

.voting-category.list-container {
  
  @if $use_compact_width == "true" {
    max-width: $small-width;
  }
  
  margin: 0 auto;

  .posters,
  .views,
  .activity {
    display: none;
  }

  [data-topic-vote-count]:before {
    content: attr(data-topic-vote-count);
    position: absolute;
    margin-left: 1.85em;
    margin-top: 2.35em;
    font-size: $font-up-1;
  }

  .topic-list-item:not(.about-topic) {
    td.main-link {
      display: flex;
      flex-direction: column;
      min-height: 52px;
    }

    .link-top-line {
      display: flex; 
    }

    .title.raw-link.raw-topic-link {
      display: block; // prevents wrapping on top of vote count
      padding: 0;
      margin-left: 65px;
    }

    .discourse-tags {
      margin-left: 65px;

      // Hide commma
      .discourse-tag:after {
        display: none;
      }
      .list-vote-count {
        display: none;
      }
    }

    .vote-count-before-title {
      display: flex;
      justify-content: center;
      color: $primary;
      padding: 10px 0;
      border: 1px solid $primary-low;
      border-radius: 5px;
      text-align: center;
      height: 30px;
      width: 45px;
      position: absolute;

      .svg-icon {
        font-size: $font-up-6;
        color: $primary-low;
        display: block;
        height: 40px;
        margin-top: -18px;
      }

      &[data-user-voted="true"] .svg-icon {
        color: $tertiary;
      }
    }

    .topic-statuses {
      margin-left: 65px;
      & + .title.raw-link.raw-topic-link {
          margin: 0;
      }
    }
  }
}

